<resources>
    <string name="app_name">Vasarely</string>
    <string name="sign_in_text">Увійти</string>
    <string name="sign_up_text">Зареєструватись</string>
    <string name="email_hint">Електронна пошта</string>
    <string name="password_hint">Пароль</string>
    <string name="username_hint">Юзернейм</string>
    <string name="forget_password">Забули пароль?</string>
    <string name="empty_email_error_message">Уведіть адресу електронної пошти!</string>
    <string name="incorrect_email_error_message">Будь ласка, використайте пошту Gmail</string>
    <string name="empty_username_error_message">Уведіть юзернейм!</string>
    <string name="empty_password_error_message">Уведіть пароль!</string>
    <string name="short_password_error_message">Пароль занадто короткий!</string>
    <string name="locate_to_home">Locate to home</string>
    <string name="locate_to_my_page">Locate to my page</string>
    <string name="locate_to_search">Locate to search</string>
    <string name="first_category">Виконання робіт</string>
    <string name="first_category_min">(мінімум 1)</string>
    <string name="welcome">Ласкаво просимо!</string>
    <string name="select_pref_text">Вкажіть свої вподобання</string>
    <string name="by_hand_button">Від руки</string>
    <string name="comp_graph_button">Комп’ютерна графіка</string>
    <string name="second_category">Улюблені жанри</string>
    <string name="second_category_min">(мінімум 2)</string>
    <string name="still_life_button">Натюрморт</string>
    <string name="portrait_button">Портрет</string>
    <string name="landscape_button">Пейзаж</string>
    <string name="marine_button">Марина</string>
    <string name="battle_painting_button">Батальний живопис</string>
    <string name="interior_button">Інтер\'єр</string>
    <string name="caricature_button">Карикатура</string>
    <string name="nude_button">Ню</string>
    <string name="anime_button">Аніме</string>
    <string name="horror_button">Хоррор</string>
    <string name="third_category">Настрій картин</string>
    <string name="third_category_min">(необов’язково)</string>
    <string name="depressed_button">Депресивний</string>
    <string name="fun_button">Веселий</string>
    <string name="nicknameplacer">NicknamePlacer</string>
    <string name="subs_text">Підписників</string>
    <string name="follow_text">Відстежує</string>
    <string name="add_work_text">Додати роботу</string>
    <string name="continue_btn_text">Далі</string>
    <string name="rememberUserSwitchText">Запам\'ятати мене</string>
    <string name="Like_text">Вподобані публікації</string>
    <string name="new_pref_text">Вказати нові вподобання</string>
    <string name="settings_nickname_text">Змінити нікнейм</string>
    <string name="key_text">Змінити пароль</string>
    <string name="logout_text">Вийти</string>
    <string name="save_button">Зберегти</string>
    <string name="Search_hint">Glory to Ukraine!</string>
    <string name="subscribe">Стежити</string>
    <string name="_0">0</string>
    <string name="save">Зберегти</string>
    <string name="select_new_pref">Вказати нові вподобання</string>
    <string name="logo_content_des">logo</string>
    <string name="search">Search</string>
    <string name="notification_title">Follower</string>
    <string name="notification_message">You have a new follower</string>
    <string name="buy_premium">Купити підписку</string>
    <string name="buy_premium_text">Преміум акаунт</string>

</resources>