<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.vasarely.viewmodel.AppViewModel"/>
    </data>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/menu_img_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/settings" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/footer_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fafafa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toTopOf="@+id/user_page_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/home_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:contentDescription="@string/locate_to_home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/user_page_button"
                    app:layout_constraintStart_toEndOf="@+id/search_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/home_icon" />

                <ImageButton
                    android:id="@+id/user_page_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:contentDescription="@string/locate_to_my_page"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/user_icon_selected" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:contentDescription="@string/locate_to_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/search_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/l"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_placer">


                <ImageButton
                    android:id="@+id/column_img_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/column" />

                <View
                    android:id="@+id/column_selected"
                    android:layout_width="100dp"
                    android:layout_height="1dp"

                    android:layout_marginTop="5dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_placer">

                <ImageButton
                    android:id="@+id/grid_img_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"

                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/grid" />

                <View
                    android:id="@+id/grid_selected"
                    android:layout_width="100dp"
                    android:layout_height="1dp"

                    android:layout_marginTop="5dp"
                    android:background="@color/accent" />
            </LinearLayout>

            <ImageView
                android:id="@+id/avatar_placer"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/nicknameplacer"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="132dp"
                android:layout_marginTop="99dp"
                android:text="@string/subs_text"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/follow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="244dp"
                android:layout_marginTop="99dp"
                android:text="@string/follow_text"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_work"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/accent"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/add_work_text"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l1"
                tools:ignore="TextContrastCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>