<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="452dp"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/changePasswordPopupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/fonts"
            android:text="Вкажіть хештеги пошуку"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="274dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/second_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_category"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/second_category_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/second_category_min"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="255dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/still_life_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/still_life_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/portrait_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/portrait_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/marine_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/marine_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/battle_painting_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/battle_painting_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/interior_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/interior_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/caricature_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/caricature_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/nude_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/nude_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/anime_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/anime_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/horror_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/horror_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />
                <Button
                    android:id="@+id/landscape_button"
                    style="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:includeFontPadding="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="6dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/landscape_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:boxBackgroundMode="outline"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/Next2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/accent"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingLeft="32dp"
                android:paddingTop="16dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp"
                android:stateListAnimator="@null"
                android:text="Далі"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:boxBackgroundMode="outline"
                app:cornerRadius="20dp"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="369dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>